          invocation (no known manifestations of this bug in the field, see
          commit message for description of exact failure scenario)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix spurious warning on MSSQL cursor invalidation retries (RT#102166)
        - Fix several corner cases with Many2Many over custom relationships
        - Fix corner cases of C3 composition being broken on OLD_MRO (5.8.x)
          only: https://github.com/frioux/DBIx-Class-Helpers/issues/61

    * Misc
        - Add explicit test for pathological example of asymmetric IC::DT setup
          working with copy() in t/icdt/engine_specific/sybase.t (GH#84)
        - Fix t/54taint.t failing on local::lib's with upgraded Carp on 5.8.*
        - Fix invalid variable names in ResultSource::View examples
        - Fix missing ORDER BY leading to failures of t/prefetch/grouped.t
          under upcoming libsqlite (RT#117271)
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Stop using bare $] throughout - protects the codebase from issues
          similar (but likely not limited to) P5#72210
        - Config::Any is no longer a core dep, but instead is migrated to a new
          optdep group 'config_file_reader'

0.082840 2016-06-20 07:02 (UTC)
    * New Features
        - When using non-scalars (e.g. arrays) as literal bind values it is no
          longer necessary to explicitly specify a bindtype (this turned out
          to be a mostly useless overprotection)

    * Fixes
        - Ensure leaving an exception stack via Return::MultiLevel or something
          similar produces a large warning